// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormAppend is rendered 1`] = `
<div
  class="css-yp07d4-wrapper"
>
  <div
    aria-label="aria-label"
    class="euiFormAppend testClass1 testClass2 css-fp5whi-side-uncompressed-euiTestCss"
    data-test-subj="test subject string"
  >
    <span
      class="euiFormLabel emotion-euiFormLabel"
    >
      Label
    </span>
  </div>
</div>
`;

exports[`EuiFormAppendPrepend is rendered 1`] = `
<div
  class="css-yp07d4-wrapper"
>
  <div
    aria-label="aria-label"
    class="euiFormAppend testClass1 testClass2 css-fp5whi-side-uncompressed-euiTestCss"
    data-test-subj="test subject string"
  >
    <span
      class="euiFormLabel emotion-euiFormLabel"
    >
      Label
    </span>
  </div>
</div>
`;

exports[`EuiFormPrepend is rendered 1`] = `
<div
  class="css-yp07d4-wrapper"
>
  <div
    aria-label="aria-label"
    class="euiFormPrepend testClass1 testClass2 css-fp5whi-side-uncompressed-euiTestCss"
    data-test-subj="test subject string"
  >
    <span
      class="euiFormLabel emotion-euiFormLabel"
    >
      Label
    </span>
  </div>
</div>
`;
